--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
 <meta charset="utf-g">
 <title>Resume</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet"href="style.css">
 </head>
 <body>
-<h1>ResumeBuilding/<h1>
+<div class="main">
+  <div class="profile">
+    <img src="harshi.png" alt="harshi">
+    <h3>harshi</h3>
+    <a href="mailto:harshithacse574@gmail.com">harshithacse574@gmail.com</a>
+      <h3>9105678568</h3>
+<div class="address">
+  <h1>address</h1>
+  <hr>
+  <p>SVIT college</p>
 
+</div>
+  </div>
+  <div class="content">
+    <h1>carrier objective</h1> <hr>
+
+  </div>
+
+</div>
+<script type="text/javascript" src="main.js">
+
+</script>
 </body>
 </html>
